03-k8s-manifests/security/ingress-webmvc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webmvc-ingress
  namespace: tp-prod
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - tp.local
      secretName: tp-local-tls
  rules:
    - host: tp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webmvc
                port:
                  number: 80
