03-k8s-manifests/security/netpol-allow-ingress-to-webmvc.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-webmvc
  namespace: tp-prod
spec:
  podSelector:
    matchLabels:
      app: webmvc
  policyTypes: ["Ingress"]
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
      ports:
        - protocol: TCP
          port: 80
