03-k8s-manifests/security/netpol-apis-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-apis-egress
  namespace: tp-prod
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values: ["applicants-api","jobs-api","identity-api"]
  policyTypes: ["Egress"]
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: sql-data
      ports:
        - protocol: TCP
          port: 1433
    - to:
        - podSelector:
            matchLabels:
              app: rabbitmq
      ports:
        - protocol: TCP
          port: 5672
