03-k8s-manifests/security/netpol-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: tp-prod
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
