03-k8s-manifests/security/netpol-web-to-apis.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-web-to-apis
  namespace: tp-prod
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values: ["applicants-api","jobs-api","identity-api"]
  policyTypes: ["Ingress"]
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: webmvc
      ports:
        - protocol: TCP
          port: 80
